tests/lean/tactic_error_msg.lean.expected.out
tactic_error_msg.lean:4:2: error: unknown identifier 'splits'
