tests/lean/tactic_error_msg.lean
example (a b : Prop) : a → b → a ∧ b :=
begin
  intros,
  splits
end
